Fix alignment issue in contact-content on about pg.

--- a/css/main.css
+++ b/css/main.css
@@ -906,6 +906,7 @@ aside .form input[type=button] {
     }
     .contact-content {
         width: 100%;
+        align-items: flex-start;
         justify-content: space-between;
 
         -ms-flex-line-pack: stretch;
